k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app
spec:
  selector:
    matchLabels:
      app: go-app
  replicas: 2 
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
      - name: go-app
        image: 076806502619.dkr.ecr.ap-south-1.amazonaws.com/go-app
        ports:
        - containerPort: 8080
