k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
  labels: 
   app: go-app
spec:
  selector:
    app: go-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
